[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/hurt.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/enemy_die.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=10]
radius = 23.0
height = 0.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "die_enemy"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk_enemy"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "die_enemy"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "walk_enemy"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachine" id=8]
states/die_enemy/node = SubResource( 5 )
states/die_enemy/position = Vector2( 537, 64 )
states/walk_enemy/node = SubResource( 6 )
states/walk_enemy/position = Vector2( 318, 115 )
transitions = [ "walk_enemy", "die_enemy", SubResource( 7 ) ]
start_node = "walk_enemy"
end_node = "die_enemy"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 1, 8 )
collision_layer = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 331, 195 )
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 322, 193 )
scale = Vector2( 1.86083, 1.81083 )
texture = ExtResource( 1 )
hframes = 8

[node name="floorRay" type="RayCast2D" parent="Sprite"]
position = Vector2( -8.59832, 2.76116 )
enabled = true
cast_to = Vector2( -0.537399, 21.5371 )
collision_mask = 1024

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2( 310, 194 )
enabled = true
cast_to = Vector2( -24, 0 )
collision_mask = 1024

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2( 327, 191 )
enabled = true
cast_to = Vector2( 27, 0 )
collision_mask = 1024

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/die_enemy = SubResource( 4 )
anims/walk_enemy = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 9 )

[node name="Area2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 87, 20 )
collision_layer = 4

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 246, 175 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="Area2D"]
